--- a/Django/django02/.settings/org.eclipse.core.resources.prefs
+++ b/Django/django02/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//company/common.py=utf-8
 encoding//company/models.py=utf-8
 encoding//company/urls.py=utf-8
 encoding//company/views.py=utf-8
